...
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Scj-pW-hlA">
                    <rect key="frame" x="32" y="159" width="350" height="609"/>
                    <subviews>
                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="qtE-eH-Z8h" customClass="TextView" customModule="Nutrition_Analyzer" customModuleProvider="target">
                            <rect key="frame" x="8" y="8" width="334" height="593"/>
                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <accessibility key="accessibilityConfiguration" identifier="input-textView"/>
                            <color key="textColor" systemColor="labelColor"/>
                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="placeholder" value="Write here"/>
                            </userDefinedRuntimeAttributes>
...
                        </userDefinedRuntimeAttribute>
                    </userDefinedRuntimeAttributes>
                </view>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5iD-AH-AP0">
                    <rect key="frame" x="107" y="800" width="200" height="46"/>
                    <color key="backgroundColor" name="AccentColor"/>
                    <accessibility key="accessibilityConfiguration" identifier="analyize-button"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="46" id="DAt-Ru-J1B"/>
                        <constraint firstAttribute="width" constant="200" id="Dyq-8W-M8y"/>
                    </constraints>
                    <color key="tintColor" name="AccentColor"/>
                    <state key="normal" title="Analize">
...
